[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "art"
dynamic = ["version"]
description = "Artifact manager"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Valohai", email = "hait@valohai.com" },
]
dependencies = [
    "boto3",
    "pyyaml",
]

[project.scripts]
art = "art.command:run_command"

[tool.hatch.version]
path = "art/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/art",
]
