[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "art"
dynamic = ["version"]
description = "Artifact manager"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Valohai", email = "hait@valohai.com" },
]
dependencies = [
    "boto3",
    "pyyaml",
]

[project.optional-dependencies]
mypy = [
    "mypy~=1.9.0",
    "types-PyYAML",
]
test = [
    "build",
    "pytest-cov",
    "pytest-mock~=3.12",
    "pytest~=8.1",
]

[project.scripts]
art = "art.command:run_command"

[tool.hatch.version]
path = "art/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/art",
]

[tool.pytest.ini_options]
norecursedirs = [".git", ".tox"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "D211",
    "D213",
    "SIM105",
]
select = [
    "D",
    "E",
    "F",
    "I",
    "SIM",
    "W",
]

[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true
