[metadata]
name = art
version = attr:art.__version__
description = Artifact manager
author = Valohai
author_email = hait@valohai.com
license = MIT

[options]
packages =
    art
install_requires =
    boto3
    pyyaml

[options.entry_points]
console_scripts =
    art=art.command:run_command

[flake8]
max-line-length = 88
extend-ignore = E203
ignore = D100,D101,D102,D103,D104,D107,SIM105

[tool:pytest]
norecursedirs = .git .tox

[isort]
profile = black
multi_line_output = 3
